--- a/SmallProject/SmallProjectTests/SmallProjectTests.csproj
+++ b/SmallProject/SmallProjectTests/SmallProjectTests.csproj
@@ -48,6 +48,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTest2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
